--- a/24-mongo-contact-app/views/detail.ejs
+++ b/24-mongo-contact-app/views/detail.ejs
@@ -13,7 +13,11 @@
                     <h6 class="card-subtitle mb-2 text-body-secondary"><%= contact.nohp %></h6>
                     <p class="card-text"><%= contact.email %></p>
                     <a href="/contact/edit/<%= contact.nama %>" class="btn btn-info badge">Ubah</a>
-                    <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('Yakin?')">Hapus</a>
+                    <!-- <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm('Yakin?')">Hapus</a> -->
+                     <form action="/contact?_method=DELETE" method="POST" class="d-inline">
+                        <input type="hidden" name="nama" value="<%= contact.nama %>">
+                        <button type="submit" class="btn btn-danger badge" onclick="return confirm('Yakin?')">hapus</button>
+                     </form>
                     <a href="/contact" class="card-link d-block mt-3">&laquo; Kembali ke daftar kontak</a>
                 </div>
             </div>
